NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/msgcntr/trunk@96617 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/messageforums-help/src/sakai_forums/asbe.html
+++ b/messageforums-help/src/sakai_forums/asbe.html
@@ -22,9 +22,9 @@ forum and topic.</p>
 
 <p>Each forum appears in an enclosed box with its title and short
 description displayed (if created). If a full description of the forum
-exists, click <strong><code>Read Full Description</code></strong> to view it.</p>
+exists, click <strong><code>View Full Description</code></strong> to view it.</p>
  
-<p>Beneath the forum title, topics are listed by title, and include a
+<p>Beneath the forum title, topics are listed by title and include a
 short description (if created). The following details also appear:</p>
  
 <ul><li>A count of total messages
@@ -39,10 +39,7 @@ your computer.
 particular forum and its topics.</p>
  
 <p>Clicking the title of any topic will display a thread of messages
-for that particular topic. If a full description of the topic exists,
-click <strong><code>Read Full Description</code></strong> to view it. Each individual
-thread appears in an enclosed box with a count of total messages and
-unread messages below. Use the arrows to the left of the messages to
+for that particular topic.  Use the arrows to the left of the messages to
 expand the threads as needed.</p>
  
 <p>To expand all threads and messages, click <strong><code>Display Entire
@@ -51,7 +48,9 @@ As Read</code></strong>. To open a printable version of the messages, click the
 printer icon at the top.</p>
 
 <p>Clicking the title of the thread will open an isolated view of a
-particular thread and its individual messages. Use the <strong><code>View</code></strong>
+particular thread and its individual messages. Each individual
+thread appears in an enclosed box with a count of total messages and
+unread messages below.  Use the <strong><code>View</code></strong>
 drop-down list to change the display of messages.</p>
 
 <p>Those with appropriate permissions (e.g., instructors) may see the
@@ -60,7 +59,8 @@ function; see <a href="content.hlp?docId=avai">Participation statistics</a>.</p>
 
 <p>To open an individual message, click its subject.</p>
 
-<p>In moderated forums, to see messages awaiting your approval, click <strong><code>Pending Messages</code></strong>; see <a href="content.hlp?docId=avar">Moderating messages in a forum</a>.</p>
+<p>In moderated forums, to see messages awaiting your approval, click
+<strong><code>Pending Messages</code></strong>; see <a href="content.hlp?docId=avar">Moderating messages in a forum</a>.</p>
 
 
 </div>
