--- a/messageforums-help/src/sakai_forums/asci.html
+++ b/messageforums-help/src/sakai_forums/asci.html
@@ -42,12 +42,11 @@ permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overvie
 <p>A default forum and topic is populated for each site.  To create a new
 forum:</p>
 
-<ol><li>In your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Forums</code></strong>. The
-Forums screen will open.
+<ol><li>In your site's <a href="content.hlp?docId=arcc">menubar</a>, click <strong><code>Forums</code></strong>. 
 
 <br /><br />
-</li><li>At the top, click <strong><code>New Forum</code></strong>. The Forum Settings screen
-will open.
+</li><li>At the top, click <strong><code>New Forum</code></strong>. The <code>Forum
+Settings</code> screen will open.
 
 <br /><br />
 </li><li>In the "Forum Title" field, type your forum's title. 
@@ -66,8 +65,10 @@ resources.
 
 
 
+
+<br /><br />
 </li><li>Under "Attachments", you can attach a file from your local
-computer or from Resources, or specify the URL for a file on the
+computer or from Resources, or specify the address for a file on the
 web. For instructions, see <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 
 <br /><br />
@@ -83,6 +84,10 @@ selected by default, allowing site participants to post messages
 without moderation.
 
 <br /><br />
+</li><li>Under "Availability", you can choose to
+display the forum immediately or to specify availability dates.
+
+<br /><br />
 </li><li>To automatically mark all messages in a thread as read at one
 time, under "Mark Threads Read", select <strong><code>Yes</code></strong> next to
 "Automatically Mark All Messages in a Thread as Read".  With this
@@ -93,9 +98,9 @@ each message individually. (With the default thread, you can also
 manually click <strong><code>Mark All as Read</code></strong> for a given thread.)
 </li><li>
 <p>Under "Permissions", you can modify permission levels for
-participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the list under
-"Permissions", select a role (or group) for editing by clicking its
-name. Then, next to "Permission Level:", use the drop-down list to
+participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the drop-down list next
+to "This site role:", select a role (or group) for editing by clicking its
+name. Then, next to "gets this permission level:", use the drop-down list to
 select from several predefined permission levels. Additionally, you
 can create custom permission levels by clicking to enable or disable
 the following functions:</p>
@@ -164,10 +169,10 @@ creating the forum, and then click <strong><code>Save Settings &amp; Add
 Topic</code></strong>.</p>
 
 <p>To add a topic later (i.e., after you've created and saved your
-forum), on the Forums screen, to the right of your forum's
+forum), on the <code>Forums</code> screen, to the right of your forum's
 title, click <strong><code>New Topic</code></strong>.</p>
 
-<p>On the Topics Settings screen:</p>
+<p>On the <code>Topics Settings</code> screen:</p>
 
 <ol><li>Next to "Topic Title", enter a title in the text box (required).
 
@@ -184,6 +189,8 @@ resources.
 
 
 
+
+<br /><br />
 </li><li>To add an attachment, under "Attachments", click <strong><code>Add
 Attachment</code></strong>. The file selector screen will open.  See <a href="content.hlp?docId=aupf">Options for adding attachments</a>.
 
@@ -200,6 +207,10 @@ default, allowing site participants to post messages without
 moderation.
 
 <br /><br />
+</li><li>Under "Availability", you can choose
+to display the forum immediately or to specify availability dates.
+
+<br /><br />
 </li><li>To automatically mark all messages in a thread as read at one
 time, under "Mark Threads Read", select <strong><code>Yes</code></strong> next to
 "Automatically Mark All Messages in a Thread as Read".  With this
@@ -210,9 +221,9 @@ each message individually. (With the default thread, you can also
 manually click <strong><code>Mark All as Read</code></strong> for a given thread.)
 </li><li>
 <p>Under "Permissions", you can modify permission levels for
-participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the list under
-"Permissions", select a role (or group) for editing by clicking its
-name. Then, next to "Permission Level:", use the drop-down list to
+participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the drop-down list next
+to "This site role:", select a role (or group) for editing by clicking its
+name. Then, next to "gets this permission level:", use the drop-down list to
 select from several predefined permission levels. Additionally, you
 can create custom permission levels by clicking to enable or disable
 the following functions:</p>
@@ -256,9 +267,9 @@ Gradebook, see <a href="content.hlp?docId=aran">Adding, editing, or deleting a G
 
 <br /><br />
 
-<ul><li><strong>Save:</strong> Save your changes, post the topic,
-and exit the Forum Settings screen. 
-You'll see your newly posted topic within your forum on the Forums screen.
+<ul><li><strong>Save:</strong> Save your changes, post the topic, and exit
+the <code>Forum Settings</code> screen.  You'll see your newly posted
+topic within your forum on the <code>Forums</code> screen.
 </li><li><strong>Save Draft:</strong> Save your topic as a draft.
 </li><li><strong>Save Settings &amp; Add Topic:</strong> Save your changes
 and add another topic to your forum. 
