--- a/messageforums-help/src/sakai_forums/atdk.html
+++ b/messageforums-help/src/sakai_forums/atdk.html
@@ -28,7 +28,6 @@
 
 
 
-
 <p><strong>Note:</strong> To complete these procedures, you must be
 assigned a role having the necessary permissions.  To determine your
 role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
@@ -47,37 +46,37 @@ click one of the following:
 
 <br /><br />
 
-<ul><li><strong>Template Settings:</strong> Settings from this default
-template will apply each time you create a new forum. You can
-override these settings for an individual forum or topic after you've
-created it.
-</li><li><strong>Forum Settings:</strong> This setting overrides the
-default template settings for an individual forum.
-</li><li><strong>Topic Settings:</strong> This setting overrides the default
+<ul><li><strong><code>Template Settings:</code></strong> Settings from this default template
+will apply each time you create a new forum. You can override these
+settings for an individual forum or topic after you've created it.
+</li><li><strong><code>Forum Settings:</code></strong> This setting overrides the default
+template settings for an individual forum.
+</li><li><strong><code>Topic Settings:</code></strong> This setting overrides the default
 template and forum settings for an individual topic.
 </li></ul><br />
 </li><li>For a forum or topic, you can change the title, descriptions, and
-attachments. You can also choose to disable postings. For a forum or
-topic or the default template, you can choose to modify permissions,
-enable moderation, or cause all messages in threads to be marked as
-read. For more about permissions, see <a href="content.hlp?docId=atdt">Controlling access to Forums</a>.
+attachments. You can also choose to disable postings, or set a
+beginning and ending date. For a forum or topic or the default
+template, you can choose to modify permissions, enable moderation, or
+cause all messages in threads to be marked as read. For more about
+permissions, see <a href="content.hlp?docId=atdt">Controlling access to Forums</a>.
 
 <br /><br />
 </li><li>When you're finished, click one of the following:
 
 <br /><br />
 
-<ul><li><strong>Save:</strong> Saves your changes and returns you to
-the Forums screen
-</li><li><strong>Save Draft:</strong> Saves your forum as a draft and returns you
-to the Forums screen
-</li><li><strong>Save Settings &amp; Add Topic:</strong> Saves your changes and
-opens the Topic Settings screen for adding a new topic to your
+<ul><li><strong><code>Save:</code></strong> Saves your changes and returns you to the
+<code>Forums</code> screen
+</li><li><strong><code>Save Draft:</code></strong> Saves your forum as a draft and returns you
+to the <code>Forums</code> screen
+</li><li><strong><code>Save Settings &amp; Add Topic:</code></strong> Saves your changes and
+opens the <code>Topic Settings</code> screen for adding a new topic to your
 forum; see <a href="content.hlp?docId=asci">Creating a new forum and topic in Forums</a>.
-</li><li><strong>Delete</strong> Removes your forum and/or topic with all
+</li><li><strong><code>Delete:</code></strong> Removes your forum and/or topic with all
 associated messages, and takes you to a confirmation page
-</li><li><strong>Cancel</strong> Cancels your changes and returns you to the
-Forums screen
+</li><li><strong><code>Cancel:</code></strong> Cancels your changes and returns you to the
+<code>Forums</code> screen
 </li></ul>
 </li></ol>
 
@@ -85,9 +84,9 @@ Forums screen
 
 <p>To delete a forum or topic you've created:</p>
 
-<ol><li>On the Forums screen, next to the title of the forum or topic you
-wish to delete, click <strong><code>Forum Settings</code></strong> or <strong><code>Topic
-Settings</code></strong>.
+<ol><li>On the <code>Forums</code> screen, next to the title of the forum
+or topic you wish to delete, click <strong><code>Forum Settings</code></strong> or
+<strong><code>Topic Settings</code></strong>.
 
 <br /><br />
 </li><li>At the bottom of the screen, click <strong><code>Delete</code></strong>.
