--- a/messageforums-help/src/sakai_forums/atdt.html
+++ b/messageforums-help/src/sakai_forums/atdt.html
@@ -16,7 +16,6 @@
 <h2>Controlling access to Forums</h2>
 
 
-
 <p>On this page:</p>
 
 
@@ -40,9 +39,9 @@ editing an existing forum or topic (see <a href="content.hlp?docId=atdk">Revisin
 
 
 <p>Under "Permissions", you can modify permission levels for
-participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the list under
-"Permissions", select a role (or group) for editing by clicking its
-name. Then, next to "Permission Level:", use the drop-down list to
+participant roles (and groups, if you've created them; see <a href="content.hlp?docId=atcs">Managing groups</a>). To do so, from the drop-down list next
+to "This site role:", select a role (or group) for editing by clicking its
+name. Then, next to "gets this permission level:", use the drop-down list to
 select from several predefined permission levels. Additionally, you
 can create custom permission levels by clicking to enable or disable
 the following functions:</p>
@@ -90,17 +89,19 @@ existing forum or topic.
 
 <br /><br />
 </li><li>On the Forum Settings or Topic Settings page, under "Permissions",
-in the list next to "Role:", select <strong><code>student</code></strong>.  From the
-drop-down list next to "Permission Level:", choose <strong><code>None</code></strong>.
+in the drop-down list next to "This site role:", select
+<strong><code>student</code></strong>.  From the drop-down list next to "gets this
+permission level:", choose <strong><code>None</code></strong>.
 
 <br /><br />
-</li><li>In the list next to "Role:", select the group to which you want to
-give access.  From the drop-down list next to "Permission Level:", choose
-a permission level (e.g., <strong><code>Contributor</code></strong>), or check the boxes below 
-the drop-down list to enable or disable specific functions.
+</li><li>In the drop-down list next to "This site role:", select the group
+to which you want to give access.  From the drop-down list next to
+"gets this permission level:", choose a permission level (e.g.,
+<strong><code>Contributor</code></strong>), or check the boxes below the drop-down list to
+enable or disable specific functions.
 
 <br /><br />
-</li><li>At the bottom of the page, click <strong><code>Save Settings</code></strong>.
+</li><li>At the bottom of the page, click <strong><code>Save</code></strong>.
 </li></ol>
 
 <a name="demos"> </a>
