--- a/messageforums-help/src/sakai_forums/avai.html
+++ b/messageforums-help/src/sakai_forums/avai.html
@@ -16,7 +16,6 @@
 <h2>Participation statistics</h2>
 
 
-
 <p>Using Forums, you can view statistics for individual course
 participants, including the number of authored, read, and unread
 posts. You can also see the full text of all posts by a particular
@@ -34,11 +33,11 @@ statistics:
 
 <br /><br />
 
-<ul><li><strong>Forum Authored:</strong> Lists the titles of the
+<ul><li><strong>Messages Authored:</strong> Lists the titles of the
     topics of posts authored by the participant, the date and time they were
     created, and the subject
 
-    </li><li><strong>Forum Read:</strong> Lists the titles of the topics of posts
+    </li><li><strong>Messages Read:</strong> Lists the titles of the topics of posts
     read, the date and time they were read, and the subject
 </li></ul><br />
 </li><li>To review the content of all of a particular participant's posts at once,
