--- a/messageforums-help/src/sakai_messages/augv.html
+++ b/messageforums-help/src/sakai_messages/augv.html
@@ -17,9 +17,11 @@
 
 
 <p>The Messages tool is intended for private correspondence with other
-individuals or groups in your site. Messages are organized into
-default <code>Received</code>, <code>Sent</code>, and
-<code>Deleted</code> folders.</p>
+individuals or groups in your site. Messages are organized into the
+following default folders:</p>
+
+<ul><li><code>Received</code></li><li><code>Sent</code></li><li><code>Deleted</code></li><li><code>Draft</code></li></ul>
+
 
 <p>The following basic functions are available in the Messages
 tool:</p>
