--- a/messageforums-help/src/sakai_messages/avao.html
+++ b/messageforums-help/src/sakai_messages/avao.html
@@ -14,7 +14,6 @@
 <body>
 <div class="helpBody">
 <h2>Messages: Overview</h2>
-
 <h3>What it does</h3>
 
 <p>The Messages tool is an internal course mail system for 
@@ -55,8 +54,7 @@ messages to distinguish important messages from others.</p>
 select number of individuals, or a select number of groups.
 
 <br /><br />
-</li><li>Messages you send using the <strong><code>To
-Recipients' Email Address(es)</code></strong> option are sent directly to
+</li><li>Messages you send using the <strong><code>Send Cc</code></strong> option are sent directly to
 participants' email addresses; copies also appear in your <code>Sent</code>
 folder and the recipients' <strong><code>Received</code></strong> folders within Messages.  
 Recipients must reply using Messages, not their email programs.
@@ -65,7 +63,6 @@ Recipients must reply using Messages, not their email programs.
 <h3>Help documentation</h3>
 
 <p>For help documentation about the Messages tool, see <a href="content.hlp?docId=avaq">Messages</a>.</p>
-
 
 </div>
 </body></html>
